test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:24:17: Unsupported: tagged union
   24 |   typedef union tagged {
      |                 ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:25:5: Unsupported: void (for tagged unions)
   25 |     void Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:30:17: Unsupported: tagged union
   30 |   typedef union tagged packed {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:31:5: Unsupported: void (for tagged unions)
   31 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:39:17: Unsupported: tagged union
   39 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:40:5: Unsupported: void (for tagged unions)
   40 |     void        Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:46:17: Unsupported: tagged union
   46 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:50:11: Unsupported: tagged union
   50 |     union tagged {
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:60:17: Unsupported: tagged union
   60 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:61:5: Unsupported: void (for tagged unions)
   61 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:66:17: Unsupported: tagged union
   66 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:67:5: Unsupported: void (for tagged unions)
   67 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:75:17: Unsupported: tagged union
   75 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:76:5: Unsupported: void (for tagged unions)
   76 |     void      Invalid;
      |     ^~~~
%Warning-SHORTREAL: t/t_tagged_if.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_if.v:82:17: Unsupported: tagged union
   82 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:83:5: Unsupported: void (for tagged unions)
   83 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:88:17: Unsupported: tagged union
   88 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:89:5: Unsupported: void (for tagged unions)
   89 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:94:17: Unsupported: tagged union
   94 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:95:5: Unsupported: void (for tagged unions)
   95 |     void  Invalid;
      |     ^~~~
%Error: t/t_tagged_if.v:116:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  116 |     v = tagged Invalid;
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:118:33: syntax error, unexpected ')', expecting '.' or tagged or .*
  118 |     if (v matches tagged Invalid)
      |                                 ^
%Error: t/t_tagged_if.v:125:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  125 |     v = tagged Valid (42);
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:127:32: Unsupported: '{} tagged patterns
  127 |     if (v matches tagged Valid .n)
      |                                ^
%Error-UNSUPPORTED: t/t_tagged_if.v:127:19: Unsupported: '{} tagged patterns
  127 |     if (v matches tagged Valid .n)
      |                   ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:127:11: Unsupported: matches operator
  127 |     if (v matches tagged Valid .n)
      |           ^~~~~~~
%Error: t/t_tagged_if.v:134:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  134 |     v = tagged Valid (100);
      |         ^~~~~~
%Error: t/t_tagged_if.v:136:33: syntax error, unexpected ')', expecting '.' or tagged or .*
  136 |     if (v matches tagged Invalid)
      |                                 ^
%Error: t/t_tagged_if.v:143:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  143 |     wt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:145:34: Unsupported: '{} tagged patterns
  145 |     if (wt matches tagged Wide60 .w)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:145:20: Unsupported: '{} tagged patterns
  145 |     if (wt matches tagged Wide60 .w)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:145:12: Unsupported: matches operator
  145 |     if (wt matches tagged Wide60 .w)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:152:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  152 |     wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:154:34: Unsupported: '{} tagged patterns
  154 |     if (wt matches tagged Wide90 .w)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:154:20: Unsupported: '{} tagged patterns
  154 |     if (wt matches tagged Wide90 .w)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:154:12: Unsupported: matches operator
  154 |     if (wt matches tagged Wide90 .w)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:161:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  161 |     wt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:163:43: Unsupported: '{} tagged patterns
  163 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |                                           ^
%Error-UNSUPPORTED: t/t_tagged_if.v:163:20: Unsupported: '{} tagged patterns
  163 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:163:12: Unsupported: matches operator
  163 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:170:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  170 |     wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:172:46: Unsupported: '{} tagged patterns
  172 |     if (wt matches tagged Word32LittleEndian .w)
      |                                              ^
%Error-UNSUPPORTED: t/t_tagged_if.v:172:20: Unsupported: '{} tagged patterns
  172 |     if (wt matches tagged Word32LittleEndian .w)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:172:12: Unsupported: matches operator
  172 |     if (wt matches tagged Word32LittleEndian .w)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:179:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  179 |     at = tagged Arr '{10, 20, 30, 40};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:181:31: Unsupported: '{} tagged patterns
  181 |     if (at matches tagged Arr .a)
      |                               ^
%Error-UNSUPPORTED: t/t_tagged_if.v:181:20: Unsupported: '{} tagged patterns
  181 |     if (at matches tagged Arr .a)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:181:12: Unsupported: matches operator
  181 |     if (at matches tagged Arr .a)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:188:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  188 |     at = tagged Scalar (999);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:190:34: Unsupported: '{} tagged patterns
  190 |     if (at matches tagged Scalar .s)
      |                                  ^
%Error: Exiting due to
